Add player for user to listen to current song

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Spotify Guess That Song!</h1>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <button id="togglePlay">Toggle Play</button>
+    <button id="nextTrack">Next</button>
+    <button id="test">test</button>
     <main>
         <div class="question-container">
             <h2>What is the name of this song?</h2>
